--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -5,9 +5,10 @@
     </h3>
     <hr class="text-white" />
     <div class="list-group list-reset">
-        <a href="#"
+        <a *ngFor="let h of historial"
+            href="#"
             class="list-group-item list-group-item-action">
-            Dashboard
+            {{ h | titlecase }}
         </a>
     </div>
-</div>
+</div> 
