--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -6,6 +6,7 @@
     <hr class="text-white" />
     <div class="list-group list-reset">
         <a *ngFor="let h of historial"
+            (click)="buscar( h )"
             href="#"
             class="list-group-item list-group-item-action">
             {{ h | titlecase }}
